# templa

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: release.yml  tests.yml
docs/source/: api.rst  conf.py  design.rst  index.rst  index_example.py  usage.rst
docs/source/_static/: summery.drawio
docs/source/basic_usage/factory/: apis.py  main.py  menu_mail_message_builder.py  todays_food_data.json  todays_menu_template.jinja
requirements/: docs.txt  requirements.txt
src/templa/: __init__.py  builder.py  config.py  yaml_builder.py
tests/: test_builder.py  test_config.py  test_yaml_builder.py
